# ai-physical-robotic-book

./: .dockerignore  .gitattributes  .gitignore  =1.10.0  ARCHITECTURE.md  COHERE_MIGRATION.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MULTI_MODEL_QUOTA_MANAGEMENT.md  RAILWAY_DEPLOYMENT.md  README.md  SOLUTION.md  TESTING.md  ask_question.py  book.yaml  check_collections_direct.py  check_qdrant_ingestion.py  check_qdrant_methods.py  check_qdrant_status.py  complete_ingestion_test.py  create_admin_user.py  create_default_user.py  docker-compose.yml  docusaurus.config.js  final_qdrant_test.py  final_test.py  ingest_book_content.py  ingest_content.py  nginx.conf  package-lock.json  package.json  production-requirements.txt  pyproject.toml  railway.toml  requirements.txt  restart_and_ingest.bat  run_server_and_ingest.py  sidebar.js  start_app.py  (+30 more)
.claude/: settings.local.json
.claude/agents/: chatkit-expert.md  core-orchestrator.md  writing-expert.md
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  README.md  alembic.ini  main.py  requirements.txt  run_server.py
backend/api/: admin.py  auth.py  chat.py  chat.py.backup  health.py  ingestion.py  metadata.py
backend/better-auth/: API_DOCS.md  auth.ts  user-profile-service.ts
backend/config/: __init__.py  settings.py
backend/docs/: api_client_example.py  api_documentation.md
backend/models/: __init__.py  chapter_metadata.py  database.py  diagnostic.py  health.py  ingestion_status.py  rag.py  rag.py.backup  user.py  user_query.py  user_selected_text.py
backend/scripts/: migrate_to_qdrant.py
backend/services/: rag_service.py
backend/utils/: auth.py  cache.py  cohere_embeddings.py  content_parser.py  embeddings.py  error_handling.py  gemini_client.py  metrics.py  monitoring.py  preprocessing.py  progress_tracker.py  qdrant_client.py  rate_limiting.py  sanitization.py
backend/validation/: quickstart_validation.py
book-source/: .gitignore  docusaurus.config.ts  package-lock.json
book-source/blog/: tags.yml
configs/: db.sql
doc/: api-reference.md  glossary.md  index.md  resources.md
doc/capstone/: overview.md  system-architecture.md
doc/conversational-robotics/: multimodal-interaction.md
doc/lab/: edge-kits.md  hardware.md
doc/physical-ai/: index.mdx
doc/ros2/: index.mdx
docs/: chatbot-floating-widget.md
docs/capstone/: pipeline.md  (+1 more)
migrations/: env.py
prisma/: schema.prisma
qdrant_storage/: meta.json
scripts/: diagnostic_qdrant_check.py
tests/: curl_examples.sh  frontend_qa_checklist.md  postman_collection.json
(+345 files in other folders)
